styling tasks container

--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
             <input type="text" name="task" class="task" placeholder="Add Task">
             <button class="add-btn">Add Task</button>
         </div>
-
-        <div class="tasks-container">
-            <span class="date">Apr 24</span>
-            <div class="inner-container">
-                <input type="checkbox">
-                <h2>Buy groceries</h2>
-                <div class="edite">
-                    <img src="assets/pen.png" alt="edit-icon">
-                </div>
-                <div class="remove">
-                    <img src="assets/remove.png" alt="remove-icon">
+        <div class="tasks">
+            <div class="tasks-container">
+                <span class="date">Apr 24</span>
+                <div class="inner-container">
+                    <input type="checkbox">
+                    <h2>Buy groceries</h2>
+                    <div class="edite">
+                        <img src="assets/pen.png" alt="edit-icon">
+                    </div>
+                    <div class="remove">
+                        <img src="assets/remove.png" alt="remove-icon">
+                    </div>
                 </div>
             </div>
         </div>
+        
     </main>
     
 </body>
