style: improve the ui

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <input type="text" name="task" class="task" placeholder="Add Task">
             <button class="add-btn">Add</button>
         </div>
+        <div class="error">
+            <h3>Enter a task</h3>
+        </div>
+
         <div class="tasks">
         </div>
 
